--- a/pages/privacy-policy.html
+++ b/pages/privacy-policy.html
@@ -1,87 +1,101 @@
 ---
 layout: page
-title: Privacy Policy
+title: "Privacy Policy"
 permalink: /privacy-policy/
 ---
 
-        <p>We understand that privacy is very important to every internet user these days. That is why we’d like to inform you on this matter. What data we collect; how we collect it; what we do with this information and how we treat it: you will read all about it on this page. <strong>WeBlog Media B.V.</strong>, the company behind <strong>Tips-and-tricks.co</strong>, places a lot of value on the privacy of every visitor to our website. That’s why we make sure that the data you leave with us is kept completely confidential. <strong>WeBlog Media B.V.</strong> acts in accordance with the <strong>Personal Data Protection Act</strong> and, since May 25, 2018, the <strong>General Data Protection Regulation (GDPR)</strong>, as far as this is applicable to us.</p>
-        
-        <p>At the present time, our website does not offer the possibility to create user profiles, comment on articles, or buy products. We also don’t provide the option to register for a newsletter with your personal information. Only by filling in our contact form will we receive your personalized data, but this is limited to the information you fill in yourself. We do use (depersonalized) data to make sure our website runs properly/better. We collect this information through functional and analytical cookies. We also place marketing cookies, but only with your consent. You can read more about this in our <a href="/cookie-policy/">Cookie Statement</a>.</p>
+# 🔒 Privacy Policy
 
-        <p>It is obligatory for all of <strong>WeBlog Media B.V.</strong>’s employees to respect the confidentiality of your data.</p>
+At **Trendio Homes**, your privacy is not just a line of code—it's a core value. Whether you're here for inspiration or information, we’re committed to keeping your data safe, your visit respectful, and your trust well-placed.
 
-        <hr>
+---
 
-        <section>
-            <h2>1. Who are we?</h2>
-            <p><strong>WeBlog Media B.V.</strong> is a private company, established and with an office in Groningen, the Netherlands, and registered with the Commercial Register of the Dutch Chamber of Commerce under number <strong>66136636</strong>.</p>
-        </section>
+## 🧵 The Backstory
 
-        <hr>
+We started as a simple idea: to make home trends more accessible and beautiful to explore. Along the way, we realized something—your trust is the foundation we build on.
 
-        <section>
-            <h2>2. What type of personal data do we collect and process?</h2>
+So here’s exactly how we collect, use, and protect your data.
 
-            <h3>Our services using personal data</h3>
-            <p>As stated before, Tips-and-tricks.co does not provide the possibility to create a user profile. It’s also impossible to comment on articles, buy products via our website, or register for a newsletter. This already precludes a very common reason for collecting your personal data from applying to us.</p>
+---
 
-            <h3>Collecting and processing contact information</h3>
-            <p>We do offer the possibility to fill in a contact form in order to contact our editorial team with a question or remark. This contact form requires you to fill in your email address, so our team can process the question/remark and provide you with an answer. Without this information, we can’t approach you. Before you send your contact form, you are asked to give permission for us to save your filled-in information. This data is consequently saved to the secure servers of Dutch company <a href="https://www.transip.nl/" target="_blank" rel="noopener">Transip B.V.</a>.</p>
+## 📋 What We Collect (and Why)
 
-            <h3>Collecting and processing automatically generated statistical data</h3>
-            <p>To make sure the website runs optimally and to keep improving, information about your use of our website is automatically processed. Optimizing our website mostly has to do with technical adjustments that, for example, make sure our pages are shown properly and that they are secure and protected. The information that is processed consists of:</p>
-            <ul>
-                <li>The type of device you use (desktop, mobile, tablet).</li>
-                <li>Your IP address (your device’s internet address, often linked to your general location).</li>
-                <li>Which browser you use.</li>
-                <li>The operating system you use.</li>
-                <li>The pages you visit on our website and where you came from before landing on our website.</li>
-            </ul>
-            <p>This is <strong>depersonalized data</strong> and it’s impossible to trace it back to you. This information is gathered through analytical cookies. You can read more about this in our <a href="/cookie-policy/">Cookie Statement</a>.</p>
+We only collect the **minimum amount of information necessary** to make this site useful, fast, and functional.
 
-            <h3>Processing data for marketing purposes</h3>
-            <p>To finance new content appearing on our website on a frequent basis, we earn revenue from advertisements. Our goal is to make the advertisements we show you as relevant as possible. To do this, we turn to third parties for help, but only with your explicit permission. These third parties collect data about:</p>
-            <ul>
-                <li>Websites you’ve visited previously.</li>
-                <li>Products you’ve viewed.</li>
-                <li>Your clicking behavior or online interests.</li>
-            </ul>
-            <p>This data is processed, with your consent, by placing advertisements. You can read more about this in our <a href="/cookie-policy/">Cookie Statement</a> and, if you would like more information about this practice, <a href="http://www.networkadvertising.org/managing/opt_out.asp" target="_blank" rel="noopener">click here</a>.</p>
-            <p><strong>WeBlog Media B.V.</strong> does not have access to this information and does not save it anywhere.</p>
+### ✨ Information We May Collect
 
-            <h3>Processing data for social media purposes</h3>
-            <p>Our website provides the option to share articles, videos, and images via social media. For this purpose, we’ve placed social media share buttons for <strong>Facebook</strong>, <strong>Instagram</strong>, and <strong>Pinterest</strong>. To ensure these buttons function properly, social media cookies are placed, after you’ve given your consent. When you click one of the share buttons, <strong>Facebook</strong>, <strong>Instagram</strong>, or <strong>Pinterest</strong> will know who you are. <strong>WeBlog Media B.V.</strong> does not save or have access to the data used by these parties. Read more in our <a href="/cookie-policy/">Cookie Statement</a>.</p>
-        </section>
+- **Anonymous data** through tools like Google Analytics (e.g. device type, browser, country)
+- **Cookies** to improve site speed, user experience, and serve relevant ads
+- **Email (only if you provide it voluntarily)** through newsletter sign-ups or contact forms
 
-        <hr>
+> **Pro Tip:** You can disable cookies through your browser settings if you're not comfortable with tracking.
 
-        <section>
-            <h2>3. What do we use the collected data for and what legal bases do we rely on?</h2>
+---
 
-            <h3>Purposes</h3>
-            <p>We collect and process necessary contact information and depersonalized statistical data to:</p>
-            <ul>
-                <li>Enable you to use the website.</li>
-                <li>Respond to questions and remarks sent via the contact form.</li>
-                <li>Draw up anonymous statistical data.</li>
-                <li>Protect, adjust, and improve the website.</li>
-            </ul>
-            <p>Collecting and processing contact information and processing statistical data is necessary for safeguarding the legitimate interests of <strong>WeBlog Media B.V.</strong> and cannot be refused.</p>
-            <p>If you agree to provide information for marketing or social media purposes, you need to give your explicit consent. With your permission, depersonalized data will be processed to:</p>
-            <ul>
-                <li>Show relevant and interesting advertisements.</li>
-                <li>Share our articles.</li>
-                <li>Avoid showing the same advertisement repeatedly.</li>
-                <li>Track other websites you visit.</li>
-            </ul>
-        </section>
+## 👁️ Cookies & Tracking
 
-        <section>
-            <h3>Usage of your data by third parties</h3>
-            <p>The data we collect and process is not shared with third parties unless you have explicitly given us permission. Personal information submitted via the contact form will <strong>never</strong> be sent to third parties unless you provide explicit consent. You can withdraw this permission at any time by contacting us.</p>
-            <p>For more details, see our <a href="/cookie-policy/">Cookie Statement</a>.</p>
-            <p><strong>WeBlog Media B.V.</strong> ensures appropriate measures are taken when personal information is provided to third parties. For instance, we may conclude a processing agreement with third parties that limits the use of your information and outlines data protection obligations.</p>
-        </section>
+This website uses:
 
-        <p>For additional questions, please contact us via the form on our website.</p>
-    
+- **Google Analytics**: to understand how visitors use the site (no personally identifiable info)
+- **Google AdSense**: to display relevant ads. Google may use cookies or web beacons to serve ads based on your visit here and other sites.
+
+You can learn how to opt out of personalized ads through [Google’s Ads Settings](https://adssettings.google.com/).
+
+---
+
+## ✉️ Email & Communication
+
+If you contact us or subscribe to a newsletter, we’ll only use your email:
+
+- To send you updates you requested
+- To respond to your message
+- We never sell or share your info with third parties
+
+> **Pro Tip:** We hate spam too. You can unsubscribe anytime—no hard feelings.
+
+---
+
+## 📦 Third-Party Links
+
+Sometimes we link to external sites—products, tools, or articles. Once you leave our site, we can’t control how those websites collect or use your data. Please check their privacy policies before sharing any personal information.
+
+---
+
+## 🔐 How We Protect Your Info
+
+We use basic security practices like HTTPS, secure servers, and limited access to information. While no online platform can guarantee 100% safety, we do our best to keep things locked down.
+
+---
+
+## 🙋‍♀️ FAQ: Quick Answers
+
+**Q: Do you sell my data?**  
+A: Never. We respect your privacy and keep your data safe.
+
+**Q: Why am I seeing ads?**  
+A: Ads help us keep the content free and fresh. We use Google AdSense to deliver relevant, non-intrusive advertising.
+
+**Q: Can I opt out of tracking?**  
+A: Yep! Use an ad blocker, turn off cookies in your browser, or opt out via Google Ads settings.
+
+**Q: I submitted my email. What now?**  
+A: You'll only get what you signed up for (newsletter, reply, etc). And you can unsubscribe anytime.
+
+---
+
+## 📝 Changes to This Policy
+
+We may update this privacy policy from time to time. When we do, we'll revise the updated date at the bottom of this page.
+
+**Last updated:** April 20, 2025
+
+---
+
+## 📬 Contact Us
+
+Got questions about privacy or how your data is used? Drop us a message at our [Contact Page](/contact/) — we're happy to chat.
+
+Thanks for trusting **Trendio Homes** with your time and attention.
+
+🖤  
+*The Trendio Homes Team*
