--- a/pages/terms-of-use.html
+++ b/pages/terms-of-use.html
@@ -1,96 +1,100 @@
 ---
 layout: page
-title: Terms of Use
-permalink: /terms-of-use/
+title: "Terms & Conditions"
+permalink: /terms-and-conditions/
 ---
 
-    <p>Welcome to <strong>mmfooty.com</strong>! By accessing and using this website, you agree to be bound by the following terms and conditions. If you do not agree with these Terms of Use, please refrain from using our website.</p>
+# 📜 Terms & Conditions
 
-    <hr>
+Welcome to **Trendio Homes**. Before you dive into our curated world of design, lifestyle, and home innovation—take a moment to read these terms. They’re not just legalese; they’re here to protect *you* and *us*, so we can keep doing what we love: sharing beautiful ideas, responsibly.
 
-    <section>
-        <h2>1. Acceptance of Terms</h2>
-        <p>By accessing <strong>mmfooty.com</strong>, you agree to comply with these Terms of Use, as well as our <a href="https://www.mmfooty.com/privacy-policy">Privacy Policy</a> and <a href="https://www.mmfooty.com/cookie-policy">Cookie Policy</a>. These terms may be updated from time to time without prior notice, and your continued use of the website signifies your acceptance of any changes.</p>
-    </section>
+---
 
-    <hr>
+## 🧭 The Spirit of the Site
 
-    <section>
-        <h2>2. Use of the Website</h2>
-        <h3>2.1 Eligibility</h3>
-        <p>You must be at least 18 years old or have parental or guardian consent to use this website. By accessing <strong>mmfooty.com</strong>, you confirm that you meet this requirement.</p>
+Trendio Homes is a content-first platform built for home lovers, idea seekers, and curious minds. Our content is for **informational and entertainment purposes only**, and we are not liable for how you choose to use it.
 
-        <h3>2.2 Permitted Use</h3>
-        <p>You agree to use this website only for lawful purposes and in a manner that does not infringe the rights of others or restrict their use and enjoyment of the website.</p>
+By accessing or using this website, you agree to the terms outlined below. If you disagree with any part of these terms, kindly refrain from using our website.
 
-        <h3>2.3 Prohibited Activities</h3>
-        <ul>
-            <li>Copy, distribute, or modify any content from <strong>mmfooty.com</strong> without prior written consent.</li>
-            <li>Use the website for any unlawful, fraudulent, or malicious activities.</li>
-            <li>Attempt to disrupt the operation of the website, including hacking, spreading viruses, or spamming.</li>
-        </ul>
-    </section>
+---
 
-    <hr>
+## ✅ Use of Content
 
-    <section>
-        <h2>3. Intellectual Property</h2>
-        <p>All content on <strong>mmfooty.com</strong>, including text, images, logos, videos, and designs, is the property of <strong>mmfooty.com</strong> or its licensors. You may not reproduce, distribute, or create derivative works without prior written permission.</p>
-    </section>
+All content published on this site (articles, images, guides, etc.) is the intellectual property of **Trendio Homes**, unless stated otherwise.
 
-    <hr>
+You may:
 
-    <section>
-        <h2>4. Disclaimer of Warranties</h2>
-        <p>The website and its content are provided "as is" and "as available" without any guarantees, warranties, or representations of any kind, either express or implied. <strong>mmfooty.com</strong> does not guarantee that the website will be error-free, secure, or uninterrupted.</p>
-    </section>
+- Read, share, and link to our articles (with credit).
+- Use content for personal, non-commercial reference.
 
-    <hr>
+You may **not**:
 
-    <section>
-        <h2>5. Limitation of Liability</h2>
-        <p>To the fullest extent permitted by law, <strong>mmfooty.com</strong> shall not be liable for any indirect, incidental, special, consequential, or punitive damages arising from your use of the website or its content.</p>
-    </section>
+- Reproduce, republish, or copy our content without permission.
+- Use our content for commercial gain or AI dataset training.
+- Misrepresent or modify content and claim it as your own.
 
-    <hr>
+> **Pro Tip:** Want to feature our content? Just contact us—we're usually happy to collaborate!
 
-    <section>
-        <h2>6. External Links</h2>
-        <p><strong>mmfooty.com</strong> may include links to third-party websites. These links are provided for your convenience, and <strong>mmfooty.com</strong> does not endorse or take responsibility for the content or practices of third-party websites.</p>
-    </section>
+---
 
-    <hr>
+## 📢 User Conduct
 
-    <section>
-        <h2>7. User-Generated Content</h2>
-        <p>If you submit any content to <strong>mmfooty.com</strong> (e.g., comments, reviews, or uploads), you grant us a non-exclusive, worldwide, royalty-free license to use, display, reproduce, and distribute such content. You are solely responsible for any content you submit and must ensure it complies with applicable laws.</p>
-    </section>
+If we offer comment sections, newsletter signups, or other interactive features, we ask that users:
 
-    <hr>
+- Be respectful—no spam, hate speech, or abusive language.
+- Do not post illegal, harmful, or misleading content.
+- Use your real email if you're signing up (we never spam).
 
-    <section>
-        <h2>8. Privacy</h2>
-        <p>Your use of <strong>mmfooty.com</strong> is subject to our <a href="https://www.mmfooty.com/privacy-policy">Privacy Policy</a>. Please review it to understand how we collect, use, and protect your personal information.</p>
-    </section>
+We reserve the right to moderate, remove, or block users who violate these rules.
 
-    <hr>
+---
 
-    <section>
-        <h2>9. Termination</h2>
-        <p>We reserve the right to suspend or terminate your access to <strong>mmfooty.com</strong> at our sole discretion if you violate these Terms of Use or engage in any unlawful or harmful activity.</p>
-    </section>
+## 💸 Ads, Affiliates & Sponsored Content
 
-    <hr>
+To keep our site running, we may include:
 
-    <section>
-        <h2>10. Governing Law</h2>
-        <p>These Terms of Use are governed by and construed in accordance with the laws of United States, without regard to its conflict of law principles. Any disputes shall be resolved exclusively in the courts of California.</p>
-    </section>
+- **Ads** served by Google AdSense or other ad partners
+- **Affiliate links**, which may earn us a small commission (at no cost to you)
+- **Sponsored posts**, clearly marked as such
 
-    <hr>
+We only recommend products or services we believe in or have vetted. Transparency is important to us.
 
-    <section>
-        <h2>11. Contact Us</h2>
-        <p>If you have any questions about these Terms of Use, please contact us at:</p>
-        <p><strong>Email:</strong> <a href="mailto:info@mmfooty.com">info@mmfooty.com</a></p>
-    </section>
+---
+
+## 🔗 Third-Party Links
+
+We occasionally link to external websites for your convenience. While we try to choose reputable sources, we do not control their content or practices and are not responsible for what happens once you leave our site.
+
+---
+
+## 🛠️ Modifications to the Terms
+
+We may update these Terms & Conditions as our site evolves. By continuing to use the site after changes are posted, you accept those updates.
+
+**Last updated:** April 20, 2025
+
+---
+
+## ❓ Frequently Asked Questions (FAQ)
+
+**Q: Can I use your content on my blog or channel?**  
+A: Reach out to us first! We usually allow it with proper credit and permission.
+
+**Q: I saw an ad I didn’t like. What can I do?**  
+A: Ads are served through Google. You can adjust your preferences via [Google Ads Settings](https://adssettings.google.com/).
+
+**Q: What if I don't agree with these terms?**  
+A: If you don’t accept our terms, we kindly ask that you stop using the site.
+
+---
+
+## 📩 Contact Us
+
+Still have questions? Want to request permission to republish or collaborate?
+
+Get in touch via our [Contact Page](/contact/) and we’ll get back to you.
+
+Thanks for being a part of **Trendio Homes**—where ideas live and homes evolve.
+
+🖤  
+*The Trendio Homes Team*
