--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -1,15 +1,85 @@
 ---
 layout: page
-title: About Us
-permalink: /about-us/
+title: "About Us"
+permalink: /about/
 ---
 
-    <section>
-        <p>Welcome to <strong>mmfooty.com</strong> – your one-stop destination for a diverse range of topics that enrich your life. Our platform bridges the gap between **news, education, and entertainment**, offering valuable insights into **e-commerce, technology, health, travel, gaming, and more**.</p>
+# 🏡 About Trendio Homes
 
-        <p>Whether you’re looking for the latest **gadgets and tech reviews**, seeking practical **tutorials and educational resources**, or exploring the world of **finance and investment**, we’ve got you covered. Passionate about storytelling, we also deliver engaging **blogs**, vibrant **community forums**, and trending updates in **news and media**.</p>
+Welcome to **Trendio Homes** — where trends meet timelessness, and inspiration lives in every corner.
 
-        <p>At <strong>mmfooty.com</strong>, our mission is to inspire, inform, and connect a global audience through diverse and authentic content. Join us as we explore topics that matter to you – from **health and wellness tips** to planning your next adventure in **travel and tourism**.</p>
+We’re more than just a blog — we’re a curated guide for modern living, bringing you the best of home design, smart ideas, and lifestyle upgrades to make your space feel truly *you*.
 
-        <p>Thank you for being part of our journey. Let’s grow, learn, and stay entertained together!</p>
-    </section>
+---
+
+## ✨ Our Story
+
+It all started with a simple idea:  
+*What if home design could be inspiring, accessible, and actually useful?*
+
+From flipping through magazines to obsessing over Pinterest boards, our team was constantly looking for better ways to bring trends into real homes — no fluff, just good taste and smart decisions.
+
+So we built **Trendio Homes** to share:
+- 🔍 **Curated trends** in home design & interior styling  
+- 🛠️ **Tips & guides** for homeowners, renters, and dreamers  
+- 🧠 **Inspiration boards**, product reviews, and how-to content  
+- 📈 Insightful looks at smart living, decor ideas, and space planning
+
+---
+
+## 🧠 What We Believe
+
+> "A beautiful space isn't about money — it's about vision."
+
+At Trendio Homes, we believe:
+- Every home has the potential to feel extraordinary
+- Good design is for *everyone*, not just the elite
+- Smart, sustainable choices matter
+- Inspiration should be free, honest, and creatively bold
+
+We write for the modern dweller — whether you're decorating your first apartment or revamping your forever home.
+
+---
+
+## 🧩 Who We Are
+
+We're a small (but mighty) collective of:
+- 🖊️ **Writers** who love turning trends into real-life takeaways  
+- 🧱 **Design junkies** obsessed with smart layout and color theory  
+- 📸 **Visual curators** who know how much a vibe matters  
+- 🤝 **Everyday people**, just like you
+
+Our goal is to give you **practical tools** to create a space that feels *uniquely yours*.
+
+---
+
+## 💡 Why Trendio?
+
+Because you deserve better than outdated blogs and random Pinterest boards.
+
+With **Trendio Homes**, you get:
+- 💬 Fresh content every week
+- ✅ AdSense-compliant, reader-first content
+- 📲 Mobile-friendly browsing
+- 🧠 Real research — no recycled fluff
+
+We’re not here to sell you on something you don’t need.  
+We’re here to guide, inspire, and spark your next home idea.
+
+---
+
+## ✉️ Stay in Touch
+
+Got questions, suggestions, or want to collaborate?  
+We’d *love* to hear from you!
+
+👉 Visit our [Contact Page](/contact/)  
+📩 Or email us directly at: **hello@trendio.homes**
+
+---
+
+Thanks for stopping by.  
+We’re glad you’re here 💛
+
+🖤  
+*The Trendio Homes Team*
