Update and rename index.md to index.html

--- a/_posts/game/index.html
+++ b/_posts/game/index.html
@@ -1,6 +1,7 @@
 ---
-layout: post
+layout: default
 ---
+
 <div class="widget HTML is-visible type-grid" data-version="2" id="HTML7">
   <div class="widget-title title-wrap">
     <h3 class="title">Game Online Unblocked</h3>
