Update and rename index.html to game.html

--- a/_posts/game/game.html
+++ b/_posts/game/game.html
@@ -1,5 +1,7 @@
 ---
 layout: default
+title: Game
+permalink: /game/
 ---
 
 <div class="widget HTML is-visible type-grid" data-version="2" id="HTML7">
