--- a/search.html
+++ b/search.html
@@ -11,24 +11,21 @@ permalink: /search.html
 <div class="blog-posts hfeed index-post-wrap" id="search-results"></div>
 
 <script>
-    <!--
-    window.store = {
-        {% for post in site.posts %}
-            "{{ post.url | slugify}}": {
-                "id": "{{ post.url | absolute_url | xml_escape }}",
-                "url": "{{ post.url | relative_url }}",
-                "title": "{{ post.title | xml_escape }}",
-                "image": "{{ '/images/vignettes/' | append: post.vignette | relative_url }}",
-                "author": "{{ site.data.authors[post.author].name | xml_escape }}",
-                "date": "{{ post.date | date: "%d/%m/%Y" }}",
-                "excerpt": "{{ post.excerpt | strip_html | normalize_whitespace | escape_once | replace: "\n", "" | xml_escape }}",
-                "content": {{ post.content | strip_html | strip_newlines | jsonify }},
-                            }
-            {% unless forloop.last %},{% endunless %}
-            {% endfor %}
-    };
-     -->
+  // Template to generate the JSON to search
+  window.store = {
+    {% for post in site.posts %}
+      "{{ post.url | slugify }}": {
+        "title": "{{ post.title | xml_escape }}",
+        "author": "{{ post.author | xml_escape }}",
+        "category": "{{ post.category | xml_escape }}",
+        "content": {{ post.content | strip_html | strip_newlines | jsonify }},
+        "url": "{{ post.url | xml_escape }}"
+      }
+      {% unless forloop.last %},{% endunless %}
+    {% endfor %}
+  };
 </script>
+    
 <script src="/js/lunr.js"></script>
 <script src="/js/search.js"></script>
 
