--- a/search.html
+++ b/search.html
@@ -1,6 +1,6 @@
 ---
 layout: search
-permalink: /search.html
+permalink: /search/
 ---
 <div class="flex-center" id="content-wrapper" style="transform: none;"><div class="container row-x1" style="transform: none;">    
 <main id='main-wrapper'><div class="main section" id="main" name="Main Posts"><div class="widget Blog" data-version="2" id="Blog1">
