--- a/search.html
+++ b/search.html
@@ -1,8 +1,7 @@
 ---
 layout: default
+permalink: /search/
 key: search
-tutorial: list
-advanced: false
 ---
 <div class="container">
   <div class="row">
