--- a/search.html
+++ b/search.html
@@ -1,24 +1,38 @@
 ---
-layout: default
+layout: search
 permalink: /search/
 ---
-<div class="container">
-  <div class="row">
-    <div class="col-md-1"></div>
-    <div class="col-md-10">
-      <div>
-        <div class="row">
-          <div class="col-sm-6 offset-sm-3 text-center">
-            <div class="spinner-border text-success" id="spinner"></div>
-          </div>
-        </div>
-      </div>
-      <h1 class="page-header" id="search-title" style="display:none">Search result for "<label id="search-key"></label>"</h1>
-      <dl class="dl-unsur" id="search-results">
-    </div>
-    <div class="col-md-1"></div>
-  </div>
-</div>
+<div class="flex-center" id="content-wrapper" style="transform: none;"><div class="container row-x1" style="transform: none;">    
+<main id='main-wrapper'><div class="main section" id="main" name="Main Posts"><div class="widget Blog" data-version="2" id="Blog1">
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/lunr.js/2.3.6/lunr.min.js"></script>
-{% include search-core.js %}
+<div class="queryMessage">
+<span class="query-info query-success"><span id="search-term-display" ></span></span>
+</div>
+<div class="blog-posts hfeed index-post-wrap" id="search-results"></div>
+
+<script>
+  // Template to generate the JSON to search
+  window.store = {
+    {% for post in site.posts %}
+      "{{ post.url | slugify }}": {
+        "title": "{{ post.title | xml_escape }}",
+        "author": "{{ post.author | xml_escape }}",
+        "category": "{{ post.category | xml_escape }}",
+        "content": {{ post.content | strip_html | strip_newlines | jsonify }},
+        "url": "{{ post.url | xml_escape }}"
+      }
+      {% unless forloop.last %},{% endunless %}
+    {% endfor %}
+  };
+</script>
+    
+<script src="/js/lunr.js"></script>
+<script src="/js/search.js"></script>
+
+</div></div></main>
+<aside id="sidebar-wrapper">
+   <div class="sidebar supermag-pro-widget-ready section" id="sidebar" name="Sidebar">
+      {% include sidebar.html %}
+     </div>
+    </aside>
+</div></div>
